Documentação do .env
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.examle
+++ b/.env.examle
@@ -1,23 +1,13 @@
+# Este .env está separado em duas sessões, informações fixas e que precisam ser
+# alteradas
+#
+# Dados que normalmente não precisam ser alterados
+
 UID=1000
 GID=1000
 
 # Ony used in development mode of this repository
 XDEBUG_CONFIG="client_host=172.17.0.1 client_port=9003 start_with_request=yes"
-
-AKAUNTING_API_BASE_URL=https://kimai.yourdomain.tld
-AKAUNTING_AUTH_USER=
-AKAUNTING_AUTH_TOKEN=
-
-KIMAI_API_BASE_URL=https://kimai.yourdomain.tld
-KIMAI_AUTH_USER=username
-KIMAI_AUTH_TOKEN=api-token
-
-PREFEITURA=niteroi
-PREFEITURA_LOGIN=
-PREFEITURA_SENHA=
-
-# CSV de CNPJ a serem ignorados no cálculo
-IGNORAR_CNPJ=
 
 DB_ADAPTER=pdo_mysql
 DB_HOST=mysql
@@ -33,3 +23,29 @@ MYSQL_USER=report
 MYSQL_PASSWORD=report
 
 TZ=America/Sao_Paulo
+
+# Dados que você DEVE alterar
+
+# URL do Akaunting
+AKAUNTING_API_BASE_URL=https://kimai.yourdomain.tld
+# Seu username no Akaunting
+AKAUNTING_AUTH_USER=
+# Sua senha no Akaunting
+AKAUNTING_AUTH_TOKEN=
+
+# URL do Kimai
+KIMAI_API_BASE_URL=https://kimai.yourdomain.tld
+# Seu username no Kimai
+KIMAI_AUTH_USER=username
+# Sua senha de API do Kimai
+# Como gerar:
+# Vá no seu perfil, editar, API, defina uma senha de API e use ela aqui
+KIMAI_AUTH_TOKEN=api-token
+
+# Nome da prefeitura a importar dados no mês
+PREFEITURA=niteroi
+PREFEITURA_LOGIN=
+PREFEITURA_SENHA=
+
+# CSV de CNPJ a serem ignorados no cálculo
+IGNORAR_CNPJ=
