--- a/.env.example
+++ b/.env.example
@@ -27,14 +27,14 @@ TZ=America/Sao_Paulo
 # Dados que você DEVE alterar
 
 # URL do Akaunting
-AKAUNTING_API_BASE_URL=https://kimai.yourdomain.tld
+AKAUNTING_API_BASE_URL=https://akaunting.yourdomain.tld
 # Seu username no Akaunting
 AKAUNTING_AUTH_USER=
 # Sua senha no Akaunting
 AKAUNTING_AUTH_TOKEN=
 
 # URL do Kimai
-KIMAI_API_BASE_URL=https://kimai.yourdomain.tld
+KIMAI_API_BASE_URL=https://kimai.yourdomain.tlde
 # Seu username no Kimai
 KIMAI_AUTH_USER=username
 # Sua senha de API do Kimai
