--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "symfony/browser-kit": "^6.2",
         "symfony/css-selector": "^6.2",
         "symfony/mime": "^6.2",
-        "monolog/monolog": "^3.3"
+        "monolog/monolog": "^3.3",
+        "robmorgan/phinx": "^0.13.4"
     },
     "autoload": {
         "psr-4": {
