Make possible get the "report:bruto" as preview
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ PREFEITURA_SENHA=
 
 # CSV de CNPJ a serem ignorados no cálculo
 IGNORAR_CNPJ=
+# CSV de CNPJ/código de clientes internos. O código é o CNPJ|setor
+# Mandatoriamente precisa ter pelo menos o CNPJ da própria cooperativa
+CNPJ_CLIENTES_INTERNOS=
