Get extra data of user
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,14 @@ PREFEITURA=niteroi
 PREFEITURA_LOGIN=
 PREFEITURA_SENHA=
 
+# Usado para importação dos dados dos cooperados
+NEXTCLOUD_URL=
+NEXTCLOUD_USERNAME=
+# Gere uma senha de aplicação para evitar de se perder o acesso se a senha do usuário modificar
+NEXTCLOUD_PASSWORD=
+# Path completo do aruivo
+NEXTCLOUD_PATH_OF_FILE=
+
 # CSV de CNPJ a serem ignorados no cálculo
 IGNORAR_CNPJ=
 # CSV de CNPJ/código de clientes internos. O código é o CNPJ|setor
