--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/mime": "^6.2",
         "monolog/monolog": "^3.3",
         "robmorgan/phinx": "^0.13.4",
-        "phpoffice/phpspreadsheet": "^1.28"
+        "phpoffice/phpspreadsheet": "^1.28",
+        "league/flysystem-webdav": "^3.15"
     },
     "autoload": {
         "psr-4": {
