--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "monolog/monolog": "^3.3",
         "robmorgan/phinx": "^0.13.4",
         "phpoffice/phpspreadsheet": "^1.28",
-        "league/flysystem-webdav": "^3.15"
+        "league/flysystem-webdav": "^3.15",
+        "sebastiaanluca/php-pipe-operator": "^6.0"
     },
     "autoload": {
         "psr-4": {
