--- a/.env.example
+++ b/.env.example
@@ -14,13 +14,12 @@ DB_HOST=mysql
 DB_NAME=report
 DB_USER=root
 DB_PASSWORD=root
-DB_PORT=
 
 MYSQL_HOST=mysql
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=report
-MYSQL_USER=report
-MYSQL_PASSWORD=report
+MYSQL_USER=root
+MYSQL_PASSWORD=root
 
 TZ=America/Sao_Paulo
 
