--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,18 @@ services:
     environment:
       - XDEBUG_CONFIG
       - TZ
+  pgsql:
+    image: postgres:15-alpine
+    restart: unless-stopped
+    volumes:
+      - ./volumes/postgres/data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${DB_NAME:-report}
+      - POSTGRES_USER=${DB_USER:-root}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-root}
+    ports:
+      - 127.0.0.1:5432:5432
+    command: postgres -c log_statement=all
   mysql:
     image: mysql
     cap_add:
