Add hability to use multiple databases
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,12 @@ DB_NAME=report
 DB_USER=root
 DB_PASSWORD=root
 
+DB_AKAUNTING_ADAPTER=pdo_mysql
+DB_AKAUNTING_HOST=host.docker.internal
+DB_AKAUNTING_NAME=akaunting
+DB_AKAUNTING_USER=root
+DB_AKAUNTING_PASSWORD=root
+
 MYSQL_HOST=mysql
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=report
