Add default holyday list
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ KIMAI_AUTH_USER=username
 # Vá no seu perfil, editar, API, defina uma senha de API e use ela aqui
 KIMAI_AUTH_TOKEN=api-token
 
+HOLYDAYS_LIST=br-rj
+
 # Nome da prefeitura a importar dados no mês
 PREFEITURA=niteroi
 PREFEITURA_LOGIN=
