Add command to insert and update the "produção cooperativista" bill at Akaunting
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,18 @@ AKAUNTING_AUTH_USER=
 # Sua senha no Akaunting
 AKAUNTING_AUTH_TOKEN=
 
+# Id da categoria onde serão geradas as faturas de produção cooperativista de cada cooperado
+AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
+# Exemplo:
+# {"bruto":26,"FRRA":{"id":27,"tax_ids":[7]},"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31}
+AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
+
+# Maiores informações:
+# https://github.com/kylekatarnls/business-day/tree/master/src/Cmixin/Holidays
+HOLYDAYS_LIST=br-rj
+# Used to number format
+LOCALE=pt_BR
+
 # URL do Kimai
 KIMAI_API_BASE_URL=https://kimai.yourdomain.tlde
 # Seu username no Kimai
@@ -46,8 +58,6 @@ KIMAI_AUTH_USER=username
 # Como gerar:
 # Vá no seu perfil, editar, API, defina uma senha de API e use ela aqui
 KIMAI_AUTH_TOKEN=api-token
-
-HOLYDAYS_LIST=br-rj
 
 # Nome da prefeitura a importar dados no mês
 PREFEITURA=niteroi
