--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -12,13 +12,14 @@ RUN apt-get install -y \
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 RUN chmod uga+x /usr/local/bin/install-php-extensions && sync \
     && install-php-extensions \
-    sockets \
     gd \
+    intl \
     mysqli \
     pdo \
     pdo_mysql \
     pdo_pgsql \
     pgsql \
+    sockets \
     xdebug \
     zip \
     @composer \
