Remove unused data from example
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ AKAUNTING_AUTH_TOKEN=
 # Id da categoria onde serão geradas as faturas de produção cooperativista de cada cooperado
 AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
 # Exemplo:
-# {"bruto":26,"FRRA":{"id":27,"tax_ids":[7]},"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31}
+# {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31}
 AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
 
 # Maiores informações:
