Create invoice class and add extra items to "produção cooperativista" bill
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -38,10 +38,14 @@ AKAUNTING_AUTH_USER=
 # Sua senha no Akaunting
 AKAUNTING_AUTH_TOKEN=
 
+# Id da categoria onde serão geradas as faturas de FRRA de cada cooperado
+AKAUNTING_FRRA_CATEGORY_ID=34
+AKAUNTING_FRRA_MES_PADRAO=12
+AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
 # Id da categoria onde serão geradas as faturas de produção cooperativista de cada cooperado
 AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
 # Exemplo:
-# {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31}
+# {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31,"desconto":32}
 AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
 
 # Maiores informações:
