Cadastra cooperado no akaunting
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,7 @@ AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
 # Exemplo:
 # {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31,"desconto":32}
 AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
+AKAUNTING_COMPANY_ID=1
 
 # Maiores informações:
 # https://github.com/kylekatarnls/business-day/tree/master/src/Cmixin/Holidays
