--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "autoload": {
         "psr-4": {
             "ProducaoCooperativista\\": "src/",
-            "ProducaoCooperativista\\Migrations": "config/db/migrations"
+            "ProducaoCooperativista\\Migrations\\": "config/db/migrations"
         }
     },
     "bin" : [
