Update .env.example with more details
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -38,16 +38,42 @@ AKAUNTING_AUTH_USER=
 # Sua senha no Akaunting
 AKAUNTING_AUTH_TOKEN=
 
-# Id da categoria onde serão geradas as faturas de FRRA de cada cooperado
-AKAUNTING_FRRA_CATEGORY_ID=34
-AKAUNTING_FRRA_MES_PADRAO=12
-AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
-# Id da categoria onde serão geradas as faturas de produção cooperativista de cada cooperado
-AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
-# Exemplo:
-# {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31,"desconto":32}
-AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
 AKAUNTING_COMPANY_ID=1
+
+AKAUNTING_FRRA_MES_PADRAO=12
+
+# Id da categoria de despesa onde serão geradas as faturas de FRRA de cada cooperado
+AKAUNTING_FRRA_CATEGORY_ID=34
+# Id da categoria de despesa para adiantamentos
+AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
+# Id da categoria de despesa onde serão geradas as faturas de produção cooperativista de cada cooperado
+AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
+
+# IDs de itens pertencentes a categoria "Produção cooperativista"
+# Os códigos dos itens devem ser mantidos pois são a chave de identificação dos mesmos.
+# Exemplo:
+# {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31,"desconto":32,"frra":27}
+#
+# Nome: Desconto
+# Desconto aplicado na produção cooperativista.
+# Exemplos de tipos de descontos:
+# * Adiantamento
+# * Quota patronal
+#
+# Nome: Bruto
+# Valor bruto da produção cooperativista
+#
+# Nome: INSS
+# Instituto Nacional do Seguro Social
+#
+# Nome: IRPF
+# Imposto de renda retido na fonte
+#
+# Nome: FRRA
+# Fundo de repouso remunerado anual
+#
+# Nome: Plano de saúde
+AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
 
 # Maiores informações:
 # https://github.com/kylekatarnls/business-day/tree/master/src/Cmixin/Holidays
