Apply a logic order at environments
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -42,12 +42,12 @@ AKAUNTING_COMPANY_ID=1
 
 AKAUNTING_FRRA_MES_PADRAO=12
 
-# Id da categoria de despesa onde serão geradas as faturas de FRRA de cada cooperado
-AKAUNTING_FRRA_CATEGORY_ID=34
-# Id da categoria de despesa para adiantamentos
-AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
 # Id da categoria de despesa onde serão geradas as faturas de produção cooperativista de cada cooperado
 AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
+# Id da categoria de despesa onde serão geradas as faturas de FRRA de cada cooperado, filha de "Produção cooperativista"
+AKAUNTING_FRRA_CATEGORY_ID=34
+# Id da categoria de despesa para adiantamentos, filha de "Produção cooperativista"
+AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
 
 # IDs de itens pertencentes a categoria "Produção cooperativista"
 # Os códigos dos itens devem ser mantidos pois são a chave de identificação dos mesmos.
