Change from IRPF to IRRF
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
 # IDs de itens pertencentes a categoria "Produção cooperativista"
 # Os códigos dos itens devem ser mantidos pois são a chave de identificação dos mesmos.
 # Exemplo:
-# {"bruto":26,"INSS":28,"IRPF":29,"Plano":30,"Auxílio":31,"desconto":32,"frra":27}
+# {"bruto":26,"INSS":28,"IRRF":29,"Plano":30,"Auxílio":31,"desconto":32,"frra":27}
 #
 # Nome: Desconto
 # Desconto aplicado na produção cooperativista.
@@ -66,7 +66,7 @@ AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
 # Nome: INSS
 # Instituto Nacional do Seguro Social
 #
-# Nome: IRPF
+# Nome: IRRF
 # Imposto de renda retido na fonte
 #
 # Nome: FRRA
