--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "type": "project",
     "license": "AGPL-3.0-or-later",
     "require": {
-        "bamarni/composer-bin-plugin": "^1.8",
         "cmixin/business-day": "^1.16",
         "doctrine/dbal": "^3.5",
         "doctrine/migrations": "^3.6",
@@ -19,6 +18,9 @@
         "symfony/mime": "^6.2",
         "vlucas/phpdotenv": "^5.5"
     },
+    "require-dev": {
+        "bamarni/composer-bin-plugin": "^1.8"
+    },
     "autoload": {
         "psr-4": {
             "ProducaoCooperativista\\": "src/",
@@ -32,5 +34,11 @@
         "allow-plugins": {
             "bamarni/composer-bin-plugin": true
         }
+    },
+    "scripts": {
+        "bin": "echo 'bin not installed'",
+        "lint": "find . -name \\*.php -not -path './vendor/*' -not -path './vendor-bin/*' -print0 | xargs -0 -n1 php -l",
+        "cs:check": "php-cs-fixer fix --dry-run --diff",
+        "cs:fix": "php-cs-fixer fix"
     }
 }
