--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,10 @@
     "config": {
         "allow-plugins": {
             "bamarni/composer-bin-plugin": true
-        }
+        },
+        "optimize-autoloader": true,
+        "classmap-authoritative": true,
+        "sort-packages": true
     },
     "extra": {
         "bamarni-bin": {
@@ -48,6 +51,14 @@
         "cs:fix": "php-cs-fixer fix",
         "psalm": "psalm --threads=1",
         "psalm:update-baseline": "psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
-        "psalm:clear": "psalm --clear-cache && psalm --clear-global-cache"
+        "psalm:clear": "psalm --clear-cache && psalm --clear-global-cache",
+        "post-install-cmd": [
+            "@composer bin all install --ansi",
+            "composer dump-autoload"
+        ],
+        "post-update-cmd": [
+            "@composer bin all update --ansi",
+            "composer dump-autoload"
+        ]
     }
 }
