--- a/composer.json
+++ b/composer.json
@@ -40,18 +40,18 @@
     },
     "extra": {
         "bamarni-bin": {
-            "bin-links": true,
+            "bin-links": false,
+            "target-directory": "vendor-bin",
             "forward-command": true
         }
     },
     "scripts": {
-        "bin": "echo 'bin not installed'",
         "lint": "find . -name \\*.php -not -path './vendor/*' -not -path './vendor-bin/*' -print0 | xargs -0 -n1 php -l",
-        "cs:check": "php-cs-fixer fix --dry-run --diff",
-        "cs:fix": "php-cs-fixer fix",
-        "psalm": "psalm --threads=1",
-        "psalm:update-baseline": "psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
-        "psalm:clear": "psalm --clear-cache && psalm --clear-global-cache",
+        "cs:check": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --dry-run --diff",
+        "cs:fix": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix",
+        "psalm": "vendor-bin/psalm/vendor/bin/psalm --threads=1",
+        "psalm:update-baseline": "vendor-bin/psalm/vendor/bin/psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
+        "psalm:clear": "vendor-bin/psalm/vendor/bin/psalm --clear-cache && psalm --clear-global-cache",
         "post-install-cmd": [
             "@composer bin all install --ansi",
             "composer dump-autoload"
