--- a/.env.example
+++ b/.env.example
@@ -42,12 +42,26 @@ AKAUNTING_COMPANY_ID=1
 
 AKAUNTING_FRRA_MES_PADRAO=12
 
+# Id da categoria de distribuiçã de sobras no mês
+AKAUNTING_DISTRIBUICAO_SOBRAS_CATEGORY_ID=35
 # Id da categoria de despesa onde serão geradas as faturas de produção cooperativista de cada cooperado
 AKAUNTING_PRODUCAO_COOPERATIVISTA_CATEGORY_ID=11
 # Id da categoria de despesa onde serão geradas as faturas de FRRA de cada cooperado, filha de "Produção cooperativista"
-AKAUNTING_FRRA_CATEGORY_ID=34
+AKAUNTING_FRRA_CATEGORY_ID=33
 # Id da categoria de despesa para adiantamentos, filha de "Produção cooperativista"
-AKAUNTING_ADIANTAMENTO_CATEGORY_ID=35
+AKAUNTING_ADIANTAMENTO_CATEGORY_ID=34
+# Id da categoria de plano de saúde
+AKAUNTING_PLANO_DE_SAUDE_CATEGORY_ID=29
+# Id de categorias de impostos
+AKAUNTING_IMPOSTOS_COFINS_CATEGORY_ID=40
+AKAUNTING_IMPOSTOS_INSS_IRRF_CATEGORY_ID=38
+AKAUNTING_IMPOSTOS_ISS_CATEGORY_ID=39
+AKAUNTING_IMPOSTOS_PIS_CATEGORY_ID=41
+# Ids dos contatos de impostos
+AKAUNTING_IMPOSTOS_COFINS_CONTACT_ID=111
+AKAUNTING_IMPOSTOS_INSS_IRRF_CONTACT_ID=20
+AKAUNTING_IMPOSTOS_ISS_CONTACT_ID=111
+AKAUNTING_IMPOSTOS_PIS_CONTACT_ID=111
 
 # IDs de itens pertencentes a categoria "Produção cooperativista"
 # Os códigos dos itens devem ser mantidos pois são a chave de identificação dos mesmos.
