Convert taxes data to object
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -52,16 +52,11 @@ AKAUNTING_FRRA_CATEGORY_ID=33
 AKAUNTING_ADIANTAMENTO_CATEGORY_ID=34
 # Id da categoria de plano de saúde
 AKAUNTING_PLANO_DE_SAUDE_CATEGORY_ID=29
-# Id de categorias de impostos
-AKAUNTING_IMPOSTOS_COFINS_CATEGORY_ID=40
-AKAUNTING_IMPOSTOS_INSS_IRRF_CATEGORY_ID=38
-AKAUNTING_IMPOSTOS_ISS_CATEGORY_ID=39
-AKAUNTING_IMPOSTOS_PIS_CATEGORY_ID=41
-# Ids dos contatos de impostos
-AKAUNTING_IMPOSTOS_COFINS_CONTACT_ID=111
-AKAUNTING_IMPOSTOS_INSS_IRRF_CONTACT_ID=20
-AKAUNTING_IMPOSTOS_ISS_CONTACT_ID=111
-AKAUNTING_IMPOSTOS_PIS_CONTACT_ID=111
+# Dados de impostos
+AKAUNTING_IMPOSTOS_COFINS={"categoryId":40,"contactId":111,"taxId":1}
+AKAUNTING_IMPOSTOS_INSS_IRRF={"categoryId":38,"contactId":20,"taxId":2}
+AKAUNTING_IMPOSTOS_ISS={"categoryId":39,"contactId":111,"taxId":2}
+AKAUNTING_IMPOSTOS_PIS={"categoryId":41,"contactId":111,"taxId":3}
 
 # IDs de itens pertencentes a categoria "Produção cooperativista"
 # Os códigos dos itens devem ser mantidos pois são a chave de identificação dos mesmos.
