--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,9 @@ AKAUNTING_FRRA_CATEGORY_ID=33
 AKAUNTING_ADIANTAMENTO_CATEGORY_ID=34
 # Id da categoria de plano de saúde
 AKAUNTING_PLANO_DE_SAUDE_CATEGORY_ID=29
+# Id da categoria de dispêndios do cliente
+AKAUNTING_DISPENDIOS_CLIENTE_CATEGORY_ID=28
+AKAUNTING_NAO_DISPENDIOS_CATEGORIES="[\"Produção cooperativista\",\"Produção: Distribuição de sobras\",\"Produção: externa\",\"Produção: FRRA\",\"Imposto: Pessoa Física\",\"Dispêndio: Cliente\",\"Dispêndio: Plano de saúde\"]"
 # Dados de impostos
 AKAUNTING_IMPOSTOS_COFINS={"categoryId":40,"contactId":111,"taxId":1}
 AKAUNTING_IMPOSTOS_INSS_IRRF={"categoryId":38,"contactId":20,"taxId":2}
