Migrations movidas para pasta src
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ProducaoCooperativista\\": "src/",
-            "ProducaoCooperativista\\Migrations\\": "config/db/migrations"
+            "ProducaoCooperativista\\": "src/"
         }
     },
     "bin" : [
