Atualização do .env
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,6 @@ DB_AKAUNTING_PASSWORD=root
 MYSQL_HOST=mysql
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=report
-MYSQL_USER=root
-MYSQL_PASSWORD=root
 
 TZ=America/Sao_Paulo
 
@@ -41,6 +39,7 @@ AKAUNTING_AUTH_TOKEN=
 AKAUNTING_COMPANY_ID=1
 
 AKAUNTING_FRRA_MES_PADRAO=12
+AKAUNTING_RESGATE_SALDO_IRPF_MES_PADRAO=12
 
 # Id da categoria de distribuiçã de sobras no mês
 AKAUNTING_DISTRIBUICAO_SOBRAS_CATEGORY_ID=35
@@ -59,8 +58,10 @@ AKAUNTING_NOTAS_CLIENTES_CATEGORIES="[\"Cliente\",\"Cliente: Recorrência\",\"Cl
 # Dados de impostos
 AKAUNTING_IMPOSTOS_COFINS={"categoryId":40,"contactId":111,"taxId":1}
 AKAUNTING_IMPOSTOS_INSS_IRRF={"categoryId":38,"contactId":20,"taxId":2}
-AKAUNTING_IMPOSTOS_ISS={"categoryId":39,"contactId":111,"taxId":2}
+AKAUNTING_IMPOSTOS_IRPF_RETIDO={"categoryId":42,"contactId":20,"taxId":2}
+AKAUNTING_IMPOSTOS_ISS={"categoryId":39,"contactId":111,"taxId":4}
 AKAUNTING_IMPOSTOS_PIS={"categoryId":41,"contactId":111,"taxId":3}
+AKAUNTING_IMPOSTOS_ITEM_ID=14
 
 # IDs de itens pertencentes a categoria "Produção cooperativista"
 # Os códigos dos itens devem ser mantidos pois são a chave de identificação dos mesmos.
@@ -121,3 +122,4 @@ IGNORAR_CNPJ=
 # CSV de CNPJ/código de clientes internos. O código é o CNPJ|setor
 # Mandatoriamente precisa ter pelo menos o CNPJ da própria cooperativa
 CNPJ_CLIENTES_INTERNOS=
+CNPJ_COMPANY=
