Atualização após mudanças no código
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -52,9 +52,9 @@ AKAUNTING_ADIANTAMENTO_CATEGORY_ID=34
 # Id da categoria de plano de saúde
 AKAUNTING_PLANO_DE_SAUDE_CATEGORY_ID=29
 # Id da categoria de dispêndios do cliente
-AKAUNTING_DISPENDIOS_CLIENTE_CATEGORY_ID=28
-AKAUNTING_NAO_DISPENDIOS_CATEGORIES="[\"Produção cooperativista\",\"Produção: Distribuição de sobras\",\"Produção: externa\",\"Produção: FRRA\",\"Imposto: Pessoa Física\",\"Dispêndio: Cliente\",\"Dispêndio: Plano de saúde\"]"
-AKAUNTING_NOTAS_CLIENTES_CATEGORIES="[\"Cliente\",\"Cliente: Recorrência\",\"Cliente: Serviço\",\"Cliente: Serviço externo\"]"
+AKAUNTING_PARENT_DISPENDIOS_CLIENTE_CATEGORY_ID=28
+AKAUNTING_PARENT_DISPENDIOS_INTERNOS_CATEGORY_ID=16
+AKAUNTING_PARENT_ENTRADAS_CLIENTES_CATEGORY_ID=45
 # Dados de impostos
 AKAUNTING_IMPOSTOS_COFINS={"categoryId":40,"contactId":111,"taxId":1}
 AKAUNTING_IMPOSTOS_INSS_IRRF={"categoryId":38,"contactId":20,"taxId":2}
@@ -87,7 +87,7 @@ AKAUNTING_IMPOSTOS_ITEM_ID=14
 # Fundo de repouso remunerado anual
 #
 # Nome: Plano de saúde
-AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS=
+AKAUNTING_PRODUCAO_COOPERATIVISTA_ITEM_IDS={"bruto":26,"INSS":28,"IRRF":29,"Plano":30,"Auxílio":32,"desconto":31,"frra":27}
 
 # Maiores informações:
 # https://github.com/kylekatarnls/business-day/tree/master/src/Cmixin/Holidays
