--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "cs:fix": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix",
         "psalm": "vendor-bin/psalm/vendor/bin/psalm --threads=1",
         "psalm:update-baseline": "vendor-bin/psalm/vendor/bin/psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
-        "psalm:clear": "vendor-bin/psalm/vendor/bin/psalm --clear-cache && psalm --clear-global-cache",
+        "psalm:clear": "vendor-bin/psalm/vendor/bin/psalm --clear-cache && vendor-bin/psalm/vendor/bin/psalm --clear-global-cache",
         "post-install-cmd": [
             "@composer bin all install --ansi",
             "composer dump-autoload"
