Ignore .phpunit.cache
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,6 @@
             "@composer bin all update --ansi",
             "composer dump-autoload"
         ],
-        "test:unit": "vendor-bin/unit/vendor/bin/phpunit -c tests/php/phpunit.xml --color --fail-on-warning --fail-on-risky"
+        "test:unit": "vendor-bin/unit/vendor/bin/phpunit -c tests/php/phpunit.xml --color --no-coverage --fail-on-warning --fail-on-risky"
     }
 }
