Convert database settings to URL
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -9,17 +9,8 @@ GID=1000
 # Ony used in development mode of this repository
 XDEBUG_CONFIG="client_host=172.17.0.1 client_port=9003 start_with_request=yes"
 
-DB_ADAPTER=pdo_mysql
-DB_HOST=mysql
-DB_NAME=report
-DB_USER=root
-DB_PASSWORD=root
-
-DB_AKAUNTING_ADAPTER=pdo_mysql
-DB_AKAUNTING_HOST=host.docker.internal
-DB_AKAUNTING_NAME=akaunting
-DB_AKAUNTING_USER=root
-DB_AKAUNTING_PASSWORD=root
+DB_URL=pdo-mysql://root:root@mysql/report
+DB_URL_AKAUNTING=pdo-mysql://root:root@host.docker.internal/akaunting
 
 MYSQL_HOST=mysql
 MYSQL_ROOT_PASSWORD=root
