--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,13 @@
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
-        "bamarni/composer-bin-plugin": "^1.8"
+        "bamarni/composer-bin-plugin": "^1.8",
+        "doctrine/data-fixtures": "^1.6"
     },
     "autoload": {
         "psr-4": {
-            "ProducaoCooperativista\\": "src/"
+            "ProducaoCooperativista\\": "src/",
+            "Tests\\Php\\": "tests/php"
         }
     },
     "bin" : [
