--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -26,9 +26,11 @@ jobs:
       mysql:
         image: mysql
         ports:
-          - 3306:3306/tcp
+          - 4444:3306/tcp
         env:
+          MYSQL_HOST: localhost
           MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: report
         options: --health-cmd="mysqladmin ping" --health-interval 5s --health-timeout 2s --health-retries 5
 
     steps:
