--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ GID=1000
 # Ony used in development mode of this repository
 XDEBUG_CONFIG="client_host=172.17.0.1 client_port=9003 start_with_request=yes"
 
+APP_DEBUG=true
+
 DB_URL=pdo-mysql://root:root@mysql/report
 DB_URL_AKAUNTING=pdo-mysql://root:root@host.docker.internal/akaunting
 
