--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/http-foundation": "^6.3",
         "symfony/mime": "^6.2",
         "symfony/routing": "^6.3",
+        "twig/twig": "^3.7",
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
