--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,9 @@ HOLYDAYS_LIST=br-rj
 # Used to number format
 LOCALE=pt_BR
 
+DIA_UTIL_PAGAMENTO=5
+PERCENTUAL_MAXIMO=25
+
 # URL do Kimai
 KIMAI_API_BASE_URL=https://kimai.yourdomain.tlde
 # Seu username no Kimai
