Atualização de local onde os logs são gravados
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -86,4 +86,4 @@ jobs:
       - name: Print logs
         if: always()
         run: |
-          cat logs/system.log
+          cat storage/logs/system.log
