Expondo porta para possibilitar uso da interface web
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       - XDEBUG_CONFIG
       - TZ
+    ports:
+      - 8080:80
     extra_hosts:
       - host.docker.internal:host-gateway
   pgsql:
