--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 #
 # Dados que normalmente não precisam ser alterados
 
-UID=1000
-GID=1000
+HOST_UID=1000
+HOST_GID=1000
 
 # Ony used in development mode of this repository
 XDEBUG_CONFIG="client_host=172.17.0.1 client_port=9003 start_with_request=yes"
@@ -104,14 +104,6 @@ KIMAI_AUTH_TOKEN=api-token
 PREFEITURA=niteroi
 PREFEITURA_LOGIN=
 PREFEITURA_SENHA=
-
-# Usado para importação dos dados dos cooperados
-NEXTCLOUD_URL=
-NEXTCLOUD_USERNAME=
-# Gere uma senha de aplicação para evitar de se perder o acesso se a senha do usuário modificar
-NEXTCLOUD_PASSWORD=
-# Path completo do aruivo
-NEXTCLOUD_PATH_OF_FILE=
 
 # CSV de CNPJ/código de clientes internos. O código é o CNPJ|setor
 # Mandatoriamente precisa ter pelo menos o CNPJ da própria cooperativa
