--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "doctrine/migrations": "^3.6",
         "doctrine/orm": "^2.15",
         "doctrine/sql-formatter": "^1.1",
+        "librecodecoop/impostos": "^0.0.1",
         "monolog/monolog": "^3.3",
         "php-di/php-di": "*",
         "phpoffice/phpspreadsheet": "^1.28",
@@ -50,6 +51,7 @@
         }
     },
     "scripts": {
+        "bin": "echo 'bin not installed'",
         "lint": "find . -name \\*.php -not -path './vendor/*' -not -path './vendor-bin/*' -print0 | xargs -0 -n1 php -l",
         "cs:check": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --dry-run --diff",
         "cs:fix": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix",
