--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "librecodecoop/impostos": "^0.0.1",
         "monolog/monolog": "^3.3",
         "php-di/php-di": "*",
+        "roukmoute/polyfill-calendar": "^0.5.0",
         "symfony/browser-kit": "^6.2",
         "symfony/cache": "^6.3",
         "symfony/console": "^6.2",
