fix: url example
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.env.example
+++ b/.env.example
@@ -92,7 +92,7 @@ DIA_UTIL_PAGAMENTO=5
 PERCENTUAL_MAXIMO=25
 
 # URL do Kimai
-KIMAI_API_BASE_URL=https://kimai.yourdomain.tlde
+KIMAI_API_BASE_URL=https://kimai.yourdomain.tld/api
 # Sua senha de API do Kimai
 # Como gerar:
 # Vá no seu perfil, editar, API, defina uma senha de API e use ela aqui
