--- a/composer.json
+++ b/composer.json
@@ -63,8 +63,8 @@
     "scripts": {
         "bin": "echo 'bin not installed'",
         "lint": "find . -name \\*.php -not -path './vendor/*' -not -path './vendor-bin/*' -print0 | xargs -0 -n1 php -l",
-        "cs:check": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --dry-run --diff",
-        "cs:fix": "vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix",
+        "cs:check": "PHP_CS_FIXER_IGNORE_ENV=1 vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --dry-run --diff",
+        "cs:fix": "PHP_CS_FIXER_IGNORE_ENV=1 vendor-bin/cs/vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix",
         "psalm": "vendor-bin/psalm/vendor/bin/psalm --no-cache --threads=$(nproc)",
         "psalm:update-baseline": "vendor-bin/psalm/vendor/bin/psalm --threads=$(nproc) --update-baseline --set-baseline=tests/psalm-baseline.xml",
         "post-install-cmd": [
