fix: enable PHP 8.4 native lazy objects in Doctrine
Signed-off-by: Vitor Mattos <1079143+vitormattos@users.noreply.github.com>

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,6 +17,7 @@ doctrine:
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
+        enable_native_lazy_objects: true
         default_entity_manager: main
         controller_resolver:
             auto_mapping: false
